Ingress/Prueba con dos namespaces/k3d-ingress-dev.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
  labels:
    name: dev
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-dev
  namespace: dev
  labels:
    app: nginx-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-dev
  template:
    metadata:
      labels:
        app: nginx-dev
    spec:
      containers:
      - name: nginxdemos
        image: nginxdemos/hello:latest
---
apiVersion: v1
kind: Service
metadata:
  name: service-nginx-dev
  namespace: dev
  labels:
    app: nginx-dev
spec:
  selector:
    app: nginx-dev
  ports:
    - protocol: TCP
      port: 80
---
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-dev
  namespace: dev
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /nginx-dev
        pathType: Prefix
        backend:
          service:
            name: service-nginx-dev
            port:
              number: 80
