Ingress/Prueba con dos namespaces/k3d-ingress-prod.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: prod
  labels:
    name: prod
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-prod
  namespace: prod
  labels:
    app: nginx-prod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-prod
  template:
    metadata:
      labels:
        app: nginx-prod
    spec:
      containers:
      - name: nginx
        image: nginxdemos/hello:latest
---
apiVersion: v1
kind: Service
metadata:
  name: service-nginx-prod
  namespace: prod
  labels:
    app: nginx-prod
spec:
  selector:
    app: nginx-prod
  ports:
    - protocol: TCP
      port: 80
---
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-nginx-prod
  namespace: prod
  annotations:
    ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /nginx-prod
        pathType: Prefix
        backend:
          service:
            name: service-nginx-prod
            port:
              number: 80
